# 1945-cringine

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2TTF.cmake  FindSDL2_Image.cmake  FindSDL2_mixer.cmake
include/Collections/: aiv-common.h  aiv-dictionary.h  aiv-list.h  aiv-vector.h
include/Components/: background_component.h  bullet_behaviour_component.h  component-factory.h  enemy_behaviour_component.h  enemy_spawn_component.h  lives_handler_component.h  my_component.h  player_movement_component.h  player_shooting_component.h  test_component.h
include/Engine/: animator.h  component-factory.h  game.h  gameObject.h  managers.h  rigidbody.h  scene.h  sprite.h
include/Math/: vec2.h
src/: main.c
src/Collections/: aiv-dictionary.c  aiv-list.c  aiv-vector.c
src/Components/: background_component.c  bullet_behaviour_component.c  enemy_behaviour_component.c  enemy_spawn_component.c  lives_handler_component.c  player_movement_component.c  player_shooting_component.c  test_component.c
src/Engine/: animator.c  game.c  gameObject.c  managers.c  rigidbody.c  scene.c  sprite.c
src/Math/: vec2.c
